syntax = "proto3";

package ru.x0xdc.otus.java.grpc.protobuf.generated;

option java_multiple_files = true;
option java_outer_classname = "NumberSequenceStreamingProto";

service NumberSequenceService {
    rpc getNumbers(NumberSequenceRequest) returns (stream NumberSequenceReply) {}
}

message NumberSequenceRequest {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message NumberSequenceReply {
    int32 num = 1;
}

